# code-intel-mcp

./: .editorconfig  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  THIRD_PARTY_NOTICES  pyproject.toml  setup-mac.sh
.github/workflows/: ci.yml
scripts/: build-zoekt.sh
src/code_intel_mcp/: __init__.py  cli.py  dependencies.py  errors.py  files.py  git_manager.py  gitlab_client.py  models.py  registry.py  search.py  server.py  zoekt.py  zoekt_installer.py
tests/: __init__.py  conftest.py  test_cli.py  test_dependencies.py  test_files.py  test_git_manager.py  test_gitlab_client.py  test_registry.py  test_zoekt.py
