[build-system]
requires = ["hatchling"]
build-backend = "hatchling.backends"

[project]
name = "code-intel-mcp"
version = "0.1.0"
description = "MCP server for git lifecycle management, Zoekt-based code search, and cross-repo dependency analysis"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "code-intel-mcp contributors" },
]
keywords = ["mcp", "code-search", "git", "zoekt", "dependency-analysis"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[project.urls]
Homepage = "https://github.com/arunveersingh/code-intel-mcp"
Repository = "https://github.com/arunveersingh/code-intel-mcp"
Issues = "https://github.com/arunveersingh/code-intel-mcp/issues"
Changelog = "https://github.com/arunveersingh/code-intel-mcp/blob/main/CHANGELOG.md"
dependencies = [
    "mcp",
    "gitpython",
    "httpx",
    "click",
]

[project.scripts]
code-intel-mcp = "code_intel_mcp.cli:main"

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "hypothesis",
]

[tool.hatch.build.targets.wheel]
packages = ["src/code_intel_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
